bin/testsuite/tests/compiler/src/errors/compiler3512.swg
#global testerror "Err0189"

#test
{
    let itf = @compiler
    itf.compileString("const X = 1")
}
